--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -50,7 +50,7 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-separator vertical&gt;&lt;/ui-separator&gt;
+&lt;ui-separator orientation="vertical"&gt;&lt;/ui-separator&gt;
 </code></pre>
 
       </div>
