--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -6,13 +6,12 @@
 <div>
   <h2>Info</h2>
   <p>The separator stretches along its axis according to the size of its parent element.</p>
-  <p>This component will become obsolete once <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented across all major browsers.</p>
-  <p>Separators default size along their orientation axis.</p>
+  <p>Once the <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented, this component can be replaced with a standard CSS property.</p>
 </div>
 
 <div>
   <h2>Attributes</h2>
-  <p>orientation - static. Sets the separator orientation. Available options: horizontal, vertical. Default: horizontal</p>
+  <p>orientation - static (optional). Sets the separator orientation. Available options: horizontal, vertical. Default: horizontal</p>
 </div>
 
 <section class="content">
