--- a/assets/app.css
+++ b/assets/app.css
@@ -119,7 +119,7 @@ main{
 
 
 .visual-block{
-  background-color:var(--color-neutral-500);
+  background-color:var(--ui-surface-color-default);
 }
 
 
