--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -5,6 +5,7 @@
 
 <div>
   <h2>Info</h2>
+  <p>A vertical separator needs to be placed inside a container with display: flex or grid.</p>
   <p>The separator stretches along its axis according to the size of its parent element.</p>
   <p>Once the <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented, this component can be replaced with a standard CSS property.</p>
 </div>
@@ -36,7 +37,7 @@
   </div>
 
   <div class="content-item">
-    <div>Vertical</div>
+    <div>Vertical (parent container: display: flex | grid)</div>
     <div class="example">
       <div class="preview">
         <div class="visual-block" style="width:30px;height:60px;"></div>
