--- a/docs/components/tabs.html
+++ b/docs/components/tabs.html
@@ -25,16 +25,26 @@
       <div class="preview">
         <ui-tabs>
           <div>
-            <button>What is Lorem?</button>
+            <button>What is this?</button>
             <button disabled>Disabled</button>
-            <button>Where to use?</button>
-            <button>Where?</button>
+            <button>Where can I use it?</button>
+            <button>Why does it matter?</button>
           </div>
-          <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-          <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-          <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p><p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+          <div>
+            This is a tab component that helps organize content into sections, making it easy to switch between different pieces of information.
           </div>
-          <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+          <div>
+            This section is currently locked and cannot be edited.
+          </div>
+
+          <div>
+            The component is useful for FAQs, product descriptions, tutorials, or any content that benefits from clear organization and easy access.
+          </div>
+
+          <div>
+            Using this component improves navigation and helps visitors find information faster.
           </div>
         </ui-tabs>
       </div>
@@ -46,26 +56,26 @@
 <pre><code>
 &lt;ui-tabs&gt;
   &lt;div&gt;
-    &lt;button&gt;What is Lorem?&lt;/button&gt;
+    &lt;button&gt;What is this?&lt;/button&gt;
     &lt;button disabled&gt;Disabled&lt;/button&gt;
-    &lt;button&gt;Where to use?&lt;/button&gt;
-    &lt;button&gt;Where?&lt;/button&gt;
+    &lt;button&gt;Where can I use it?&lt;/button&gt;
+    &lt;button&gt;Why does it matter?&lt;/button&gt;
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    This is a tab component that helps organize content into sections, making it easy to switch between different pieces of information.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    This section is currently locked and cannot be edited.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    The component is useful for FAQs, product descriptions, tutorials, or any content that benefits from clear organization and easy access.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    Using this component improves navigation and helps visitors find information faster.
   &lt;/div&gt;
 &lt;/ui-tabs&gt;
 </code></pre>
@@ -78,18 +88,28 @@
     <div>Vertical</div>
     <div class="example">
       <div class="preview">
-        <ui-tabs vertical>
+        <ui-tabs orientation="vertical">
           <div>
-            <button>What is Lorem?</button>
+            <button>What is this?</button>
             <button disabled>Disabled</button>
-            <button>Where to use?</button>
-            <button>Where?</button>
+            <button>Where can I use it?</button>
+            <button>Why does it matter?</button>
           </div>
-          <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-          <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
-          <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p><p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+          <div>
+            This is a tab component that helps organize content into sections, making it easy to switch between different pieces of information.
           </div>
-          <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p><p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+
+          <div>
+            This section is currently locked and cannot be edited.
+          </div>
+
+          <div>
+            The component is useful for FAQs, product descriptions, tutorials, or any content that benefits from clear organization and easy access.
+          </div>
+
+          <div>
+            Using this component improves navigation and helps visitors find information faster.
           </div>
         </ui-tabs>
       </div>
@@ -99,28 +119,28 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-tabs vertical&gt;
+&lt;ui-tabs orientation="vertical"&gt;
   &lt;div&gt;
-    &lt;button&gt;What is Lorem?&lt;/button&gt;
-    &lt;button disabled&gt;Why use it?&lt;/button&gt;
-    &lt;button&gt;Where to use?&lt;/button&gt;
-    &lt;button&gt;Where?&lt;/button&gt;
+    &lt;button&gt;What is this?&lt;/button&gt;
+    &lt;button disabled&gt;Disabled&lt;/button&gt;
+    &lt;button&gt;Where can I use it?&lt;/button&gt;
+    &lt;button&gt;Why does it matter?&lt;/button&gt;
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    This is a tab component that helps organize content into sections, making it easy to switch between different pieces of information.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    This section is currently locked and cannot be edited.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    The component is useful for FAQs, product descriptions, tutorials, or any content that benefits from clear organization and easy access.
   &lt;/div&gt;
 
   &lt;div&gt;
-    Lorem Ipsum is simply dummy text.
+    Using this component improves navigation and helps visitors find information faster.
   &lt;/div&gt;
 &lt;/ui-tabs&gt;
 </code></pre>
