--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -30,7 +30,7 @@
     <div>Alert with description (no close button)</div>
     <div class="example">
       <div class="preview">
-        <ui-alert non-closable>
+        <ui-alert>
           <div>Your settings have been successfully saved.</div>
         </ui-alert>
       </div>
