--- a/docs/components/separator.html
+++ b/docs/components/separator.html
@@ -15,6 +15,13 @@
   <p>orientation - static (optional). Sets the separator orientation. Available options: horizontal, vertical. Default: horizontal</p>
 </div>
 
+<div>
+  <h2>CSS Properties</h2>
+  <p>--separator-thickness:1px;</p>
+  <p>--separator-spacing:0;</p>
+  <p>--separator-color:var(--ui-surface-color-secondary);</p>
+</div>
+
 <section class="content">
 
   <div class="content-item">
