--- a/ui/components/alert/alert.css
+++ b/ui/components/alert/alert.css
@@ -1,5 +1,5 @@
 ui-alert{
-  --ui-alert-border-radius:var(--ui-border-radius-default);
+  --alert-border-radius:var(--ui-border-radius-default);
   --ui-alert-background-color:var(--ui-panel-color-default);
 
   --ui-alert-max-width:100%;
@@ -7,10 +7,7 @@ ui-alert{
   --ui-alert-padding-inline:20px;
   --ui-alert-title-font-size:16px;
   --ui-alert-content-font-size:14px;
-  --ui-alert-icon-height:24px;
-  --ui-alert-icon-width:24px;
   --ui-alert-row-gap:8px;
-  --ui-alert-icon-color:currentColor;
   --ui-alert-content-color:var(--ui-color-gray-200);
 
   position:relative;
@@ -21,15 +18,12 @@ ui-alert{
   align-items:start;
   padding-block:var(--ui-alert-padding-block);
   padding-inline:var(--ui-alert-padding-inline);
-  border-radius:var(--ui-alert-border-radius);
+  border-radius:var(--alert-border-radius);
   background-color:var(--ui-alert-background-color);
   max-width:var(--ui-alert-max-width);
 
   /* icon */
   & > ui-icon{
-    --ui-icon-height:var(--ui-alert-icon-height);
-    --ui-icon-width:var(--ui-alert-icon-width);
-    color:var(--ui-alert-icon-color);
     align-self:center;
     grid-column:1 / 2;
     grid-row:1 / 3;
@@ -42,7 +36,7 @@ ui-alert{
 
   &:has(:is(h2,h3,h4,h5,h6)) > :is(h2,h3,h4,h5,h6),
   &:not(:has(:is(h2,h3,h4,h5,h6))) > div{
-    padding-inline-end:24px;
+    padding-inline-end:32px;
   }
 
   /* title */
@@ -65,11 +59,6 @@ ui-alert{
 
   /* close button */
   & > ui-button{
-    --ui-button-size:24px;
-    --ui-button-surface-color-default:transparent;
-    --ui-button-icon-height:20px;
-    --ui-button-icon-width:20px;
-
     position:absolute;
     top:12px;
     inset-inline-end:12px;
