--- a/ui/styles/themes/dark.css
+++ b/ui/styles/themes/dark.css
@@ -14,6 +14,10 @@
     var(--color-neutral-700),
     var(--color-neutral-800) 50%
   );
+  --ui-surface-color-secondary:var(--color-neutral-800);
+
+  /* border */
+  --ui-border-color:var(--color-neutral-800);
 
   /* panel */
   --ui-panel-color-default:var(--color-neutral-900);
@@ -30,9 +34,6 @@
   --ui-link-color-default:var(--color-neutral-300);
   --ui-link-color-hover:var(--color-neutral-200);
   --ui-link-color-active:var(--color-neutral-50);
-
-  /* border */
-  --ui-border-color:var(--color-neutral-800);
 
   /* outline */
   --ui-outline-color:var(--color-blue-500);
