--- a/docs/components/input.html
+++ b/docs/components/input.html
@@ -29,7 +29,9 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-input></ui-input>
+        <ui-input>
+          <input />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -37,7 +39,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input&gt;&lt;/ui-input&gt;
+&lt;ui-input&gt;
+  &lt;input /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -48,9 +52,15 @@
     <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
-        <ui-input shape="rounded"></ui-input>
-        <ui-input shape="pill"></ui-input>
-        <ui-input shape="square"></ui-input>
+        <ui-input shape="rounded">
+          <input />
+        </ui-input>
+        <ui-input shape="pill">
+          <input />
+        </ui-input>
+        <ui-input shape="square">
+          <input />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -58,11 +68,17 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input shape="rounded"&gt;&lt;/ui-input&gt;
+&lt;ui-input shape="rounded"&gt;
+  &lt;input /&gt;
+&lt;/ui-input&gt;
 
-&lt;ui-input shape="pill"&gt;&lt;/ui-input&gt;
+&lt;ui-input shape="pill"&gt;
+  &lt;input /&gt;
+&lt;/ui-input&gt;
 
-&lt;ui-input shape="square"&gt;&lt;/ui-input&gt;
+&lt;ui-input shape="square"&gt;
+  &lt;input /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -73,7 +89,9 @@
     <div>Clear button</div>
     <div class="example">
       <div class="preview">
-        <ui-input clearable></ui-input>
+        <ui-input clearable>
+          <input />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -81,7 +99,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input clearable&gt;&lt;/ui-input&gt;
+&lt;ui-input clearable&gt;
+  &lt;input /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -92,7 +112,9 @@
     <div>Required</div>
     <div class="example">
       <div class="preview">
-        <ui-input required></ui-input>
+        <ui-input>
+          <input required />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -100,7 +122,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input required&gt;&lt;/ui-input&gt;
+&lt;ui-input&gt;
+  &lt;input required /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -111,7 +135,9 @@
     <div>Placeholder</div>
     <div class="example">
       <div class="preview">
-        <ui-input placeholder="Placeholder"></ui-input>
+        <ui-input>
+          <input placeholder="Placeholder" />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -119,7 +145,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input placeholder="Placeholder"&gt;&lt;/ui-input&gt;
+&lt;ui-input&gt;
+  &lt;input placeholder="Placeholder" /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -130,7 +158,9 @@
     <div>Disabled + Placeholder</div>
     <div class="example">
       <div class="preview">
-        <ui-input placeholder="Disabled" disabled></ui-input>
+        <ui-input>
+          <input placeholder="Disabled" disabled />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -138,7 +168,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input placeholder="Disabled" disabled&gt;&lt;/ui-input&gt;
+&lt;ui-input&gt;
+  &lt;input placeholder="Disabled" disabled /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
@@ -149,7 +181,9 @@
     <div>Disabled + Value</div>
     <div class="example">
       <div class="preview">
-        <ui-input disabled value="Disabled"></ui-input>
+        <ui-input>
+          <input value="Disabled" disabled />
+        </ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -157,7 +191,9 @@
       <div class="code">
 
 <pre><code>
-&lt;ui-input value="Disabled" disabled&gt;&lt;/ui-input&gt;
+&lt;ui-input&gt;
+  &lt;input value="Disabled" disabled /&gt;
+&lt;/ui-input&gt;
 </code></pre>
 
       </div>
