--- a/docs/components/field.html
+++ b/docs/components/field.html
@@ -22,7 +22,7 @@
     <div class="example">
       <div class="preview">
         <ui-field>
-          <div>Label</div>
+          <label>Label</label>
           <ui-checkbox></ui-checkbox>
         </ui-field>
       </div>
@@ -33,7 +33,7 @@
 
 <pre><code>
 &lt;ui-field&gt;
-  &lt;div&gt;Label&lt;/div&gt;
+  &lt;label&gt;Label&lt;/label&gt;
   &lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;
 &lt;/ui-field&gt;
 </code></pre>
@@ -47,7 +47,7 @@
     <div class="example">
       <div class="preview">
         <ui-field div-position="end">
-          <div>Label</div>
+          <label>Label</label>
           <ui-switch></ui-switch>
         </ui-field>
       </div>
@@ -58,7 +58,7 @@
 
 <pre><code>
 &lt;ui-field div-position="end"&gt;
-  &lt;div&gt;Label&lt;/div&gt;
+  &lt;label&gt;Label&lt;/label&gt;
   &lt;ui-switch&gt;&lt;/ui-switch&gt;
 &lt;/ui-field&gt;
 </code></pre>
@@ -72,7 +72,7 @@
     <div class="example">
       <div class="preview">
         <ui-field>
-          <div>Label</div>
+          <label>Label</label>
           <ui-switch></ui-switch>
         </ui-field>
       </div>
@@ -83,7 +83,7 @@
 
 <pre><code>
 &lt;ui-field&gt;
-  &lt;div&gt;Label&lt;/div&gt;
+  &lt;label&gt;Label&lt;/label&gt;
   &lt;ui-switch&gt;&lt;/ui-switch&gt;
 &lt;/ui-field&gt;
 </code></pre>
@@ -97,7 +97,7 @@
     <div class="example">
       <div class="preview">
         <ui-field required vertical>
-          <div>Label</div>
+          <label>Label</label>
           <ui-textarea height="200"></ui-textarea>
         </ui-field>
       </div>
