--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -22,7 +22,9 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea></ui-textarea>
+        <ui-textarea>
+          <textarea></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -41,8 +43,12 @@
     <div>Shape</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea></ui-textarea>
-        <ui-textarea shape="square"></ui-textarea>
+        <ui-textarea>
+          <textarea></textarea>
+        </ui-textarea>
+        <ui-textarea shape="square">
+          <textarea></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -63,7 +69,9 @@
     <div>Required</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea required></ui-textarea>
+        <ui-textarea>
+          <textarea required></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -82,7 +90,9 @@
     <div>Placeholder</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea placeholder="Placeholder"></ui-textarea>
+        <ui-textarea>
+          <textarea placeholder="Placeholder"></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -101,7 +111,9 @@
     <div>Disabled + Placeholder</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea placeholder="Disabled" disabled></ui-textarea>
+        <ui-textarea>
+          <textarea placeholder="Disabled" disabled></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -120,7 +132,9 @@
     <div>Disabled + Value</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea value="Disabled" disabled></ui-textarea>
+        <ui-textarea>
+          <textarea value="Disabled" disabled></textarea>
+        </ui-textarea>
       </div>
       <div class="toolbar">
         <span>HTML</span>
